<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pic">图片</string>
    <string name="photo">拍照</string>
    <string name="video">摄像</string>
    <string name="file">文件</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="iknow">知道了</string>
    <string name="clear_empty">清空</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <string name="un_download">未下载</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">下载中...</string>
    <string name="sending">发送中...</string>
    <string name="sended">已发送</string>
    <string name="has_read">已读</string>
    <string name="unread">未读</string>
    <string name="typing">正在输入...</string>

    <string name="chat_to_top">置顶聊天</string>
    <string name="mute_group_member">全员禁言</string>
    <string name="send">发送</string>

    <string name="group_id">群ID</string>
    <string name="group_name">群聊名称</string>
    <string name="group_icon">群头像</string>
    <string name="group_notice">群公告</string>
    <string name="group_owner_transfer">群主转让</string>
    <string name="group_manager">群管理员</string>
    <string name="group_mute_manager">禁言管理</string>
    <string name="group_members">群成员</string>
    <string name="group_type">群类型</string>
    <string name="add_group_member">添加成员</string>
    <string name="remove_group_member">移除成员</string>
    <string name="join_group_type">加群方式</string>
    <string name="in_group_nick_name">我的群昵称</string>
    <string name="dissolve">解散该群</string>
    <string name="modify_group_name">修改群名称</string>
    <string name="modify_group_notice">修改群公告</string>
    <string name="modify_nick_name_in_goup">修改我的群昵称</string>
    <string name="modify_nick_name">修改昵称</string>

    <string name="group_detail">群聊详情</string>
    <string name="accept">同意</string>
    <string name="refuse">拒绝</string>
    <string name="group_apply_members">群审核</string>
    <string name="accepted">已同意</string>
    <string name="refused">已拒绝</string>
    <string name="group_apply_tips">%1$d 条入群申请</string>
    <string name="group_apply_click_handle">点击处理</string>
    <string name="group_remove_member">移出群聊</string>
    <string name="group_join_type">加群方式</string>
    <string name="add_friend_type">允许加好友</string>
    <string name="without_review">无需审核直接进群</string>
    <string name="set_mute">全体禁言</string>
    <string name="set_chat_background">聊天背景</string>
    <string name="chat_background">聊天背景</string>
    <string name="new_message_reminder">新消息提醒</string>
    <string name="clear_cache">清理缓存</string>
    <string name="modify_group_name_success">修改群名称成功</string>
    <string name="modify_group_notice_success">修改群公告成功</string>
    <string name="exit_group">退出群聊</string>
    <string name="modify_nickname_success">修改昵称成功</string>
    <string name="view_original_image">查看原图</string>

    <!-- 联系人相关 -->
    <string name="new_friend">新的联系人</string>
    <string name="group">我的群聊</string>
    <string name="blacklist">黑名单</string>
    <string name="contact_count">%d位联系人</string>
    <string name="contact_title">通讯录</string>
    <string name="conversation_title">洽聊</string>

    <!-- 好友资料 -->
    <string name="profile_detail">详细资料</string>
    <string name="profile_id">帐号</string>
    <string name="profile_add_wording">验证消息</string>
    <string name="profile_remark">设置备注</string>
    <string name="profile_authority">朋友权限</string>
    <string name="profile_black">加入黑名单</string>
    <string name="profile_see_to">不让TA看</string>
    <string name="profile_to_see">不看TA</string>
    <string name="profile_remark_edit">修改备注</string>
    <string name="profile_chat">发送消息</string>
    <string name="profile_del">删除好友</string>

    <string name="search_call_hint">输入群成员名称</string>
    <string name="video_call">视频通话</string>
    <string name="audio_call">语音通话</string>
    <string name="business_card">名片</string>
    <string name="video_save_success">视频保存成功</string>
    <string name="video_save_error">视频保存失败</string>
</resources>