<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.tencent.qcloud.tim.uikit.component.TitleBarLayout
        android:id="@+id/friend_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.tencent.qcloud.tim.uikit.component.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_gray1"
            android:textSize="16sp" />
    </LinearLayout>

    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:name="@string/profile_id" />

    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        android:id="@+id/add_wording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:name="@string/profile_add_wording" />

    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:isBottom="true"
        app:canNav="true"
        app:name="@string/profile_remark" />
    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/authority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canNav="true"
        app:name="@string/profile_authority" />
    <LinearLayout
        android:foreground="?android:attr/selectableItemBackground"
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/llCircleOfFriends"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rl_friend"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:text="朋友圈"
                android:id="@+id/circle_of_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/contentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btnSwitch"
                android:layout_toRightOf="@+id/circle_of_friends">

                <LinearLayout
                    android:layout_toLeftOf="@+id/llr"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rightArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="17dp"
                android:id="@+id/bottomLine"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />
        </RelativeLayout>
    </LinearLayout>


    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        android:id="@+id/chat_to_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:isSwitch="true"
        app:name="@string/chat_to_top" />

    <com.tencent.qcloud.tim.uikit.component.LineControllerView
        android:id="@+id/blackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isSwitch="true"
        app:name="@string/profile_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/btn_margin_left"
        android:paddingRight="@dimen/btn_margin_right">

        <TextView
            android:id="@+id/btnChat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bg_positive_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/profile_chat"
            android:textColor="@color/positive_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/bg_negative_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/profile_del"
            android:textColor="@color/negative_text"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
